# mathypad

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  bernard_todo  build-web.sh  cliff.toml  inject_editorial_content.sh  release.sh  todo.md
.github/workflows/: ci.yml  release.yml
completions/: mathypad.bash  mathypad.fish  mathypad.zsh
mathypad-core/: Cargo.toml
mathypad-core/src/: lib.rs
mathypad-core/src/core/: file_ops.rs  highlighting.rs  mod.rs  state.rs
mathypad-core/src/expression/: chumsky_parser.rs  evaluator.rs  mod.rs  parser.rs  tests.rs  tokens.rs
mathypad-core/src/units/: mod.rs  tests.rs  types.rs  value.rs
scripts/: bump-version.sh  release.sh
src/: app.rs  cli.rs  integration_tests.rs  lib.rs  main.rs  mode.rs  version.rs
src/expression/: chumsky_parser.rs  evaluator.rs  mod.rs  parser.rs  tests.rs  tokens.rs
src/gui/: app.rs  mod.rs  wasm.rs
src/ui/: events.rs  mod.rs  render.rs  tests.rs
src/ui/snapshots/: mathypad__ui__tests__basic_ui_layout.snap  mathypad__ui__tests__command_mode_rendering.snap  mathypad__ui__tests__cursor_at_end_of_line.snap  mathypad__ui__tests__cursor_highlighting.snap  mathypad__ui__tests__empty_results.snap  mathypad__ui__tests__results_panel_rendering.snap  mathypad__ui__tests__save_as_dialog.snap  mathypad__ui__tests__save_as_dialog_placeholder.snap  mathypad__ui__tests__scrolled_content.snap  mathypad__ui__tests__separator_indicator_dragging.snap  mathypad__ui__tests__separator_indicator_hovering.snap  mathypad__ui__tests__syntax_highlighting_functions.snap  mathypad__ui__tests__syntax_highlighting_keywords.snap  mathypad__ui__tests__syntax_highlighting_line_references.snap  mathypad__ui__tests__syntax_highlighting_line_references_with_operators.snap  mathypad__ui__tests__syntax_highlighting_numbers.snap  mathypad__ui__tests__syntax_highlighting_operators.snap  mathypad__ui__tests__syntax_highlighting_units.snap  mathypad__ui__tests__syntax_highlighting_variables.snap  mathypad__ui__tests__text_area_rendering.snap  mathypad__ui__tests__ui_different_separator_position.snap  mathypad__ui__tests__ui_normal_mode.snap  mathypad__ui__tests__ui_with_content.snap  mathypad__ui__tests__ui_with_unsaved_changes.snap  mathypad__ui__tests__unsaved_dialog.snap  mathypad__ui__tests__welcome_dialog_first_run.snap  mathypad__ui__tests__welcome_dialog_minimal_content.snap  mathypad__ui__tests__welcome_dialog_upgrade.snap  mathypad__ui__tests__welcome_dialog_with_scrolling.snap
src/units/: mod.rs  parser.rs  tests.rs  types.rs  types_v2.rs  value.rs
web/: index.html
web-poc/: .gitignore  .htaccess  Cargo.toml  INTEGRATION_PLAN.md  README.md  build-web.sh  create-png-icons.sh  index.html  manifest.json  run-web.sh  sw.js
web-poc/src/: app.rs  lib.rs  main.rs
