[package]
name = "mathypad"
version = "0.1.4"
edition = "2024"
authors = ["Pato Lankenau <rust@p.lankenau.io>"]
license = "MIT"
description = "A smart TUI calculator that understands units and makes complex calculations simple."
keywords = ["tui", "cli", "calculator", "units", "soulver"]
homepage = "https://mathypad.app"
repository = "https://github.com/pato/mathypad"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive"] }
chumsky = "0.10.1"

[[bin]]
name = "mathypad"
path = "src/bin/main.rs"
