[workspace]
members = [".", "web-poc"]
resolver = "2"

[package]
name = "mathypad"
version = "0.1.13"
edition = "2024"
authors = ["Pato Lankenau <rust@p.lankenau.io>"]
license = "MIT"
description = "A smart TUI calculator that understands units and makes complex calculations simple."
keywords = ["tui", "cli", "calculator", "units", "soulver"]
homepage = "https://mathypad.app"
repository = "https://github.com/pato/mathypad"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive", "cargo"] }
chumsky = "0.10.1"
arboard = "3.5"
dirs = "6.0"

[dev-dependencies]
insta = "1.43.1"
tempfile = "3.20"

[profile.release]
codegen-units = 1
opt-level = "z"  # Optimize for size.
strip = true
lto = true

[[bin]]
name = "mathypad"
path = "src/bin/main.rs"
