[package]
name = "mathypad-web-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
mathypad-core = { path = "../mathypad-core" }
eframe = "0.29"
egui = "0.29"
log = "0.4"
# For native builds
env_logger = "0.11"

# For WASM builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[[bin]]
name = "mathypad-web-poc"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = []

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"


